# slackbox

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  ISSUES-v2.yaml  ISSUES-v3.yaml  ISSUES.yaml  LICENSE  README.md  pyproject.toml  run_server.py  workplan.yaml
.claude-plugin/: marketplace.json  plugin.json
scripts/: setup-dev.sh
scripts/hooks/: pre-push
skills/slackbox/: SKILL.md
slack_fetch/: __init__.py  __main__.py  channels.py  cli.py  client.py  config.py  data_loader.py  formatting.py  mcp_server.py  md_cache.py  mentions.py  messages.py  rate_limit.py  text_cleaner.py  threads.py  utils.py
